--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,52 @@
+name: ros2-pipeline-test
 
+on:
+  push:
+    branches:
+      - master
+
+jobs:
+  build:
+    runs-on: ubuntu-24.04
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          path: ros2_ws/src/ros2_ci_cd
+
+      - name: Setup ROS 2 Jazzy
+        run: |
+          sudo apt update
+          sudo apt install -y curl gnupg lsb-release
+
+          sudo mkdir -p /etc/apt/keyrings
+          curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key \
+            | sudo gpg --dearmor -o /etc/apt/keyrings/ros-archive-keyring.gpg
+
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/ros-archive-keyring.gpg] \
+          http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" \
+          | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null
+
+          sudo apt update
+          sudo apt install -y \
+            ros-jazzy-desktop \
+            python3-colcon-common-extensions \
+            python3-rosdep
+
+      - name: Initialize rosdep
+        run: |
+          sudo rosdep init || true
+          rosdep update --include-eol-distros
+
+      - name: Install dependencies
+        run: |
+          source /opt/ros/jazzy/setup.bash
+          cd ros2_ws
+          rosdep install --from-paths src -y --ignore-src
+
+      - name: Build workspace
+        run: |
+          source /opt/ros/jazzy/setup.bash
+          cd ros2_ws
+          colcon build
